Updated a name on the license